# 27-cap2-ex6e7

./: .gitignore  README.md  pyproject.toml
src/word/: crew.py  main.py
src/word/config/: agents.yaml  tasks.yaml
src/word/tools/: custom_tool.py
tests/: original
