[project]
name = "word"
version = "0.1.0"
description = "word using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.14.0",
    "crewai[tools]>=0.80.0,<1.0.0",
]

[project.scripts]
word = "word.main:run"
run_crew = "word.main:run"
train = "word.main:train"
replay = "word.main:replay"
test = "word.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
